# far-from-new-home

./: CMakeLists.txt  Readme.md
src/: main.cpp
src/nameGenerator/: namegen.cpp  namegen.hpp
